# rs-face-detection-tflite

./: Cargo.toml  LICENSE  README.md  clippy.toml  lib.rs  rustfmt.toml
examples/: face_detection.rs  face_landmark.rs
face_detection_lite/: face_detection.rs  face_landmark.rs  iris_landmark.rs  nms.rs  render.rs  transform.rs  types.rs  utils.rs
src/: lib.rs
src/face_detection_lite/: face_anti_spoofing.rs  face_detection.rs  face_embeddings.rs  face_landmark.rs  iris_landmark.rs  mod.rs  nms.rs  render.rs  transform.rs  types.rs  utils.rs
