[package]
name = "rs-face-detection-tflite"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Pham <phamtri2895@gmail.com>"]
description = "A tensorflow lite in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
image = "0.25.2"
opencv = {  version = "0.93.0",  features = ["clang-runtime"] }
anyhow = "1.0.89"
tflite = "0.9.8"
nalgebra = "0.33.0"
bytemuck = "1.18.0"
imageproc = "0.25.0"

[[example]]
name = "face_detection"

[[example]]
name = "face_landmark"

[lib]
name = "rs_face_detection_tfite"

[profile.dev]
opt-level = 0
incremental = true

[profile.release]
opt-level = 3
